--- a/Analyzers/Resources.resx
+++ b/Analyzers/Resources.resx
@@ -122,7 +122,7 @@
     <comment>An optional longer localizable description of the diagnostic.</comment>
   </data>
   <data name="AnalyzerMessageFormat" xml:space="preserve">
-    <value>Create SUT setup method</value>
+    <value>Create SUT setup method for {0}</value>
     <comment>The format-able message the diagnostic displays.</comment>
   </data>
   <data name="AnalyzerTitle" xml:space="preserve">
